Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111473

Dependency update on qt/qtapplicationmanager is failing in 6.5

    XMLWordPrintable

Details

    • 5703d0a24 (dev), e0538a6df (6.5)

    Description

      /usr/lib64/gcc/x86_64-suse-linux/10/../../../../x86_64-suse-linux/bin/ld: /home/qt/work/install/lib/libQt6WaylandEglCompositorHwIntegration.a(waylandeglclientbufferintegration.cpp.o): in function `setupWaylandEglClientBufferWithTextureContextAndAboutToBeDestroyedConnection(BufferState*, QOpenGLTexture*, int)':
      waylandeglclientbufferintegration.cpp:(.text._Z76setupWaylandEglClientBufferWithTextureContextAndAboutToBeDestroyedConnectionP11BufferStateP14QOpenGLTexturei+0x0): multiple definition of `setupWaylandEglClientBufferWithTextureContextAndAboutToBeDestroyedConnection(BufferState*, QOpenGLTexture*, int)'; /home/qt/work/install/./plugins/wayland-graphics-integration-server/libqt-wayland-compositor-wayland-eglstream-controller.a(waylandeglstreamintegration.cpp.o):waylandeglstreamintegration.cpp:(.text._Z76setupWaylandEglClientBufferWithTextureContextAndAboutToBeDestroyedConnectionP11BufferStateP14QOpenGLTexturei+0x0): first defined here
      collect2: error: ld returned 1 exit status
      ninja: build stopped: subcommand failed.
      Process finished with error: exit status 1
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/2abe96237bf8918f36eff6f5ecdc7a1369331d37/LinuxSLES_15_SP4x86_64LinuxSLES_15_SP4x86_64GCCqtci-linux-SLES-15_SP4-x86_64-50-e27d54DisableTests_DoNotCompileTestsDuringBuild_Sccache_UseConfigure/87052db26a423ee5cdcaea9bdc1c12f37129c82c/build_1683229620/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1683229507

      Tested changes (refs/builds/qtci/6.5/1677176718):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/462461/2 Update dependencies on '6.5' in qt/qtapplicationmanager

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            nicolauz Thomas Senyk
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes