Move setup functions from local to member

Two functions with the same name and signiture were committed in two files.
Normally this isn't an issue as those symbols end up in different plugins,
however for a static Qt build all are linked into the same binary  => symbol clash!

Changing those functions to member functions of the respective private classes resolves this issue.
As the original name was rather long, it was also shorted in the process.

Fixes: QTBUG-111473
Change-Id: I0f341a64199637a415898309763f9b5416fc4be1
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 5703d0a242aef9402d4b72ab50fe336f453e49fd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>